// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time renders relative time 1`] = `
<div>
  <time
    class="whitespace-nowrap"
    datetime="2022-02-20T10:11:34.000+01:00"
    title="2022-02-20T10:11:34.000+01:00"
  >
    10 minutes ago
  </time>
</div>
`;

exports[`Time renders relative time 2`] = `
<div>
  <time
    class="whitespace-nowrap"
    datetime="2022-02-20T10:11:34.000+01:00"
    title="2022-02-20T10:11:34.000+01:00"
  >
    2 hours ago
  </time>
</div>
`;

exports[`Time renders the time in different formats 1`] = `
<div>
  <time
    class="whitespace-nowrap"
    datetime="2022-02-20T10:11:34.000+01:00"
    title="2022-02-20T10:11:34.000+01:00"
  >
    2/20/2022, 10:11 AM
  </time>
</div>
`;

exports[`Time renders the time in different formats 2`] = `
<div>
  <time
    class="whitespace-nowrap"
    datetime="2022-02-20T10:11:34.000+01:00"
    title="2022-02-20T10:11:34.000+01:00"
  >
    2/20/2022
  </time>
</div>
`;
